[gd_scene load_steps=21 format=3 uid="uid://b8664bkyaaaw7"]

[ext_resource type="Texture2D" uid="uid://dlmplsn8nxu0" path="res://Assets/Enemies/SmallBee/Fly-Sheet.png" id="1_8x013"]
[ext_resource type="Texture2D" uid="uid://73kkbxqal0yb" path="res://Assets/Enemies/SmallBee/Attack-Sheet.png" id="1_brvq6"]
[ext_resource type="Script" path="res://scenes/script/bee.gd" id="1_mfju6"]
[ext_resource type="Texture2D" uid="uid://bry5u8fi6goie" path="res://Assets/Enemies/SmallBee/Hit-Sheet.png" id="3_lf8i2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q8w2j"]
atlas = ExtResource("1_brvq6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6br47"]
atlas = ExtResource("1_brvq6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmpja"]
atlas = ExtResource("1_brvq6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcdhx"]
atlas = ExtResource("1_brvq6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ndeu"]
atlas = ExtResource("1_8x013")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qomhk"]
atlas = ExtResource("1_8x013")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yw7x"]
atlas = ExtResource("1_8x013")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2te4"]
atlas = ExtResource("1_8x013")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi8je"]
atlas = ExtResource("3_lf8i2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pro31"]
atlas = ExtResource("3_lf8i2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayd3h"]
atlas = ExtResource("3_lf8i2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlw3p"]
atlas = ExtResource("3_lf8i2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_35t4k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8w2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6br47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmpja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcdhx")
}],
"loop": false,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ndeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qomhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yw7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2te4")
}],
"loop": true,
"name": &"fly",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi8je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pro31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayd3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlw3p")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7d2ls"]
radius = 21.0238

[sub_resource type="CircleShape2D" id="CircleShape2D_hbh7x"]
radius = 323.303

[sub_resource type="CircleShape2D" id="CircleShape2D_ir58q"]
radius = 29.0172

[node name="Bee_enemy" type="CharacterBody2D"]
position = Vector2(143, 112)
collision_layer = 16512
collision_mask = 16512
script = ExtResource("1_mfju6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_35t4k")
animation = &"hit"
autoplay = "fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 524288
visibility_layer = 524288
position = Vector2(4, -6)
shape = SubResource("CircleShape2D_7d2ls")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="Bee_aggro" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bee_aggro"]
position = Vector2(2, -4)
shape = SubResource("CircleShape2D_hbh7x")
debug_color = Color(0.181743, 0.636497, 0.264282, 0.42)

[node name="Bee_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bee_hitbox"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_ir58q")
debug_color = Color(0.971329, 0.141299, 0.242576, 0.42)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Bee_aggro" to="." method="_on_bee_aggro_body_entered"]
[connection signal="body_exited" from="Bee_aggro" to="." method="_on_bee_aggro_body_exited"]
[connection signal="body_entered" from="Bee_hitbox" to="." method="_on_bee_hitbox_body_entered"]
